# flask-app-blueprint

./: .env.example  .flaskenv  .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.json  app.py  config.py  custom.nginx.conf  deploy.sh  docker_build.sh  env_setting.sh  forms.py  local_run.sh  manage.py  migrate_local.sh  models.py  pyproject.toml  requirements.txt  uwsgi.ini
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
Docs/uml/: class.diagram puml  sequence create item puml  sequence login puml
app/: __init__.py  models.py
app/items/: forms.py  views.py
app/templates/: 403.html  410.html  _base.html  _formshelper.html  admin_dashboard.html  all_items.html  email_confirmation.html  login.html  password_change.html  register.html  user_profile.html
app/tests/: test_basic.py  test_items.py  test_users.py
app/users/: views.py
docs/: README.md  codespaces.md  getting-started.md  git-branch-commit.md  hosting-ssl-domain-names.md  index.md  mandrill-install-config.md  questions-feedback.md  stack.md  way-of-working.md
gpt2/: Dockerfile  build.sh  deploy.sh  main.py  requirements.txt  test.py
migrations/versions/: 1be4f3cab7a6_.py  211de0792902_.py  42f52f21b854_.py  783d98209305_.py  c9ea0cd0e2e7_.py
project/: __init__.py  extensions.py  mailers.py  models.py  time_utils.py
project/items/: forms.py  views.py
project/templates/: 400.html  (+23 more)
radio_receiver/: listen.py  radio.py  requirements.txt  run.cmd  run.sh
templates/: _base.html  add_item.html  all_items.html  edit_item.html  home.html  login.html  register.html
(+13 files in other folders)
